<resources>
    <string name="app_name">Sarangcoffee</string>
    <string name="slogan_app">KHỞI ĐẦU MỌI Ý TƯỞNG</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="qun_mat_khau">Quên mật khẩu?</string>
    <string name="ban_chua_co_tk">Bạn chưa có tài khoản?</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="da_co_tk">Bạn đã có tài khoản?</string>
    <string name="dk_tai_khoan">Đăng ký tài khoản</string>
    <string name="link_Sarangcoffee">Sarang.coffee.com.vn</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="admin">Admin</string>
    <string name="chuc_vu">Chức vụ</string>
    <string name="nhan_vien">Nhân viên</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="danh_muc">Danh mục</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="doi_ml">Đổi mật khẩu</string>
    <string name="thontintaikhoan">Thông tin tài khoản</string>
    <string name="hoac_dang_nhap">Hoặc đăng nhập</string>
    <string name="them">Thêm</string>
</resources>